[html] add favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>YourTour</title>
     <meta name="description" content="YourTour - идеальные путешествия существуют.">
     <meta name="keywords" content="путешествие, путешествие в горы, тур, походы, велопрогулки, сплавы, путешествие в Стамбул">
+    <link rel="icon" href="./assets/favicon 32х32.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-1024.css">
     <link rel="stylesheet" href="style-360.css">
