[js] correct display header for scrolling

--- a/index.html
+++ b/index.html
@@ -40,6 +40,28 @@
             </div>
         </header>
         <main>
+            <header class="vp-1024px header__fix">
+                <div class="header__wrapper">
+                    <div class="header__container">
+                        <div class="header__paragraph">
+                            <p class="p-normal">
+                                <img src="./assets/YourTour-dark.png" alt="YourTour" class="logo">
+                            </p>
+                        </div>
+                        <div class="header__list">
+                            <ul class="header-list__items p-normal">
+                                <li class="items-1">Туры</li>
+                                <li class="items-2">Создать тур</li>
+                                <li class="items-3">Отзывы</li>
+                                <li class="items-4">Истории</li>
+                            </ul>
+                        </div>
+                        <div class="header__number">
+                            <p class="p-normal">+7 999 999 99 99</p>
+                        </div>
+                    </div>
+                </div>
+            </header>    
             <div class="background-img"></div>
             <section class="preview">
                 <div class="preview__wrapper">
