--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div id="wrapper">
-        <header class="header__ordinary">
+        <!-- <header class="header__ordinary">
             <div class="header__wrapper">
                 <div class="header__container">
                     <div class="header__paragraph">
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </header> -->
         <main>
             <header class="vp-1024px header__fix">
                 <div class="header__wrapper">
