[html][css] add new css for 900px

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     />
     <link rel="icon" href="./assets/favicon 32х32.svg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style-1024.css" />
     <link rel="stylesheet" href="style-360.css" />
+    <link rel="stylesheet" href="style-1024.css" />
+    <link rel="stylesheet" href="style-820.css" />
     <script src="./script.js"></script>
   </head>
 
@@ -31,7 +32,7 @@
             </div>
             <div class="header__list">
               <ul class="header-list__items p-normal">
-                <li class="items-1">Туры</li>
+                <li class="items-1"><a href="#choose-tour">Туры</a></li>
                 <li class="items-2">Создать тур</li>
                 <li class="items-3">Отзывы</li>
                 <li class="items-4">Истории</li>
@@ -59,7 +60,7 @@
             <button class="btn-find-tour p-small">Найти тур</button>
           </div>
         </section>
-        <section class="choose-your-tour">
+        <!-- <section id="choose-tour" class="choose-your-tour">
           <div class="choose-tour-tour__wrapper">
             <div class="choose-your-tour__paragraph">
               <div class="choose-your-tour__title">
@@ -588,7 +589,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
       </main>
       <footer>
         <div class="footer__wrapper">
