--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <button class="btn-find-tour p-small">Найти тур</button>
           </div>
         </section>
-        <!-- <section id="choose-tour" class="choose-your-tour">
+         <section id="choose-tour" class="choose-your-tour">
           <div class="choose-tour-tour__wrapper">
             <div class="choose-your-tour__paragraph">
               <div class="choose-your-tour__title">
@@ -206,7 +206,7 @@
             </div>
           </div>
         </section>
-        <section class="collect-your-tour">
+        <!-- <section class="collect-your-tour">
           <div class="collect-your-tour_wrapper">
             <div class="collect-your-tour__paragraph">
               <div class="collect-your-tour__title">
